--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "holger1411/understrap-child",
-    "description": "Basic Child Theme for UnderStrap Theme Framework",
+    "name": "pablorica/wordpress_codigo_theme",
+    "description": "Codigo Theme for UnderStrap Theme Framework",
     "type": "library",
     "license": "GPL-2.0",
     "minimum-stability": "stable",
     "require": {},
     "keywords": ["wordpress","theme","bootstrap"],
-    "homepage": "https://github.com/holger1411/understrap-child"
+    "homepage": "https://github.com/pablorica/wordpress_codigo_theme"
 }
