Updating package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "understrap-child",
+  "name": "wordpress_codigo_theme",
   "version": "0.5.5",
   "description": "Basic Child Theme for UnderStrap Theme Framework: https://github.com/holger1411/understrap",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/holger1411/understrap-child.git"
+    "url": "https://github.com/pablorica/wordpress_codigo_theme.git"
   },
   "keywords": [
     "wordpress",
@@ -17,19 +17,21 @@
     "bootstrap",
     "underscores"
   ],
-  "author": "Holger Koenemann",
+  "author": "Pablo Rica",
   "license": "GPL-2.0",
   "bugs": {
-    "url": "https://github.com/holger1411/understrap-child/issues"
+    "url": "https://github.com/pablorica/wordpress_codigo_theme/issues"
   },
-  "homepage": "https://understrap.com",
+  "homepage": "https://codigo.co.uk/understrap",
   "dependencies": {
+    "@babel/core": "^7.9.6",
     "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
     "del": "^4.1.0",
     "font-awesome": "^4.7.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-clone": "^2.0.1",
     "gulp-concat": "^2.6.1",
@@ -38,6 +40,7 @@
     "gulp-imagemin": "^5.0.3",
     "gulp-merge": "^0.1.1",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "gulp-rimraf": "^0.2.2",
@@ -46,6 +49,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
+    "jquery": "^1.9.1",
     "merge2": "^1.2.3",
     "popper.js": "^1.15.0",
     "run-sequence": "^2.2.1",
