--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,79 @@
-.sass-cache
 
-bower_components
 
-node_modules
+# ignore all files starting with . or ~
+.*
+~*
 
-understrap.zip
-
-dist
-
-dist-product
-
+# ignore node dependency directories
+node_modules/
 npm-debug.log
 
-/vendor/
+# ignore bower dependency directories
+bower_components/
+
+# ignore composer dependency directories
+vendor/
+
+
+# ignore production directories
+dist/
+dist-product/
+
+
+# ignore cache files
+.sass-cache
+
+
+# ignore OS generated files
+ehthumbs.db
+Thumbs.db
+
+# ignore Editor files
+*.sublime-project
+*.sublime-workspace
+*.komodoproject
+
+
+# ignore log files and databases
+*.log
+*.sql
+*.sqlite
+
+# ignore compiled files
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# ignore packaged files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+
+# ignore files that a local computer might use for its own convenience
+.DS_Store
+*.swp
+*.pyc
+
+
+# local build tools
+.vagrant
+.idea
+*.sassc
+*.scssc
+*.codekit
+*.sh
+
+
+
 
 # OS generated files #
 ######################
