--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "rellax": "^1.12.1"
   }
 }
