Setting up color palette

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "codigo",
-  "version": "3.0.0",
+  "version": "3.0.15",
   "description": "Basic Child Theme for Understrap Theme Framework: https://github.com/understrap/",
   "main": "index.js",
   "scripts": {
     "bs": "browser-sync start --config src/build/browser-sync.config.js",
     "css": "npm-run-all css-compile css-postcss css-minify",
-    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --quiet src/sass/codigo.scss:css/codigo.css src/sass/custom-editor-style.scss:css/custom-editor-style.css",
+    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --quiet src/sass/codigo.scss:css/codigo.css src/sass/custom-editor-style.scss:css/custom-editor-style.css src/sass/custom-admin-style.scss:css/custom-admin-style.css",
     "css-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output css/ --batch --batch-suffix \".min\" \"css/*.css\" \"!css/*.min.css\" \"!css/*rtl*.css\"",
     "css-postcss": "postcss --config src/build/postcss.config.js --replace \"css/*.css\" \"!css/*.rtl*.css\" \"!css/*.min.css\"",
     "js": "npm-run-all js-compile js-minify",
