--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,25 @@
 {
-	"name": "understrap/understrap-child",
+	"name": "codigo/codigo",
 	"description": "Basic Child Starter Theme for Understrap",
 	"type": "wordpress-theme",
-	"license": "GPL-3.0",
+	"license": "MIT",
 	"minimum-stability": "stable",
 	"keywords": [
 		"wordpress",
 		"theme",
-		"bootstrap"
+		"bootstrap",
+        "vue"
 	],
-	"homepage": "https://github.com/understrap/understrap-child",
+	"homepage": "https://github.com/pablorica/wordpress_codigo_theme",
 	"authors": [
 		{
-			"name": "Contributors",
-			"homepage": "https://github.com/understrap/understrap-child/contributors.md"
+			"name": "Pablo Rica",
+			"homepage": "https://codigo.co.uk"
 		}
 	],
 	"require": {
-		"php": ">=5.6"
+		"php": ">=5.6",
+		"squizlabs/php_codesniffer": "^3.7"
 	},
 	"require-dev": {
 		"php-parallel-lint/php-parallel-lint": "^1.3.2",
@@ -25,7 +27,6 @@
 		"phpmd/phpmd": "^2.13.0",
 		"phpstan/phpstan": "^1.9.0",
 		"roave/security-advisories": "dev-master",
-		"squizlabs/php_codesniffer": "^3.7",
 		"szepeviktor/phpstan-wordpress": "^1.1.3",
 		"wp-coding-standards/wpcs": "^2.3.0",
 		"wptrt/wpthemereview": "^0.2.1"
@@ -45,7 +46,7 @@
 		"post-update-cmd": "@phpcs-config-set"
 	},
 	"support": {
-		"issues": "https://github.com/understrap/understrap/issues",
-		"source": "https://github.com/understrap/understrap"
+		"issues": "https://github.com/pablorica/wordpress_codigo_theme/issues",
+		"source": "https://github.com/pablorica/wordpress_codigo_theme"
 	}
 }
