Add ACF Google Map

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -42,6 +42,7 @@
 	<rule ref="WordPress.WP.I18n">
 		<properties>
 			<property name="text_domain" type="array">
+                <element value="codigo"/>
 				<element value="understrap"/>
 				<element value="woocommerce"/>
 			</property>
