--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6",
-		"squizlabs/php_codesniffer": "^3.7"
+		"php": ">=5.6"
+		
 	},
 	"require-dev": {
+        "squizlabs/php_codesniffer": "^3.8",
 		"php-parallel-lint/php-parallel-lint": "^1.3.2",
 		"phpcompatibility/phpcompatibility-wp": "^2.1.4",
-		"phpmd/phpmd": "^2.13.0",
+		"phpmd/phpmd": "^2.14.0",
 		"phpstan/phpstan": "^1.9.0",
 		"roave/security-advisories": "dev-master",
 		"szepeviktor/phpstan-wordpress": "^1.1.3",
